tests/ui/not-trivial.stderr
error[E0277]: the trait bound `String: ref_cast::trivial::Trivial` is not satisfied
 --> $DIR/tests/ui/not-trivial.rs:8:10
  |
8 |     two: String,
  |          ^^^^^^ the trait `ref_cast::trivial::Trivial` is not implemented for `String`
  |
note: required by a bound in `assert_trivial`
 --> $DIR/src/trivial.rs:8:26
  |
8 | pub fn assert_trivial<T: Trivial>() {}
  |                          ^^^^^^^ required by this bound in `assert_trivial`
